@@ -14,8 +14,12 @@ import dev.luisghtz.myaichat.chat.repositories.MessageRepository;
 import dev.luisghtz.myaichat.chat.utils.MessagesUtils;
 import dev.luisghtz.myaichat.file.providers.AwsS3Service;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.*;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.ai.chat.messages.AssistantMessage;
 import org.springframework.ai.chat.model.ChatResponse;
 import org.springframework.ai.chat.model.Generation;
@@ -31,6 +35,7 @@ import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 class MessagesServiceTest {
 
   @Mock
@@ -49,7 +54,7 @@ class MessagesServiceTest {
 
   @BeforeEach
   void setUp() {
-    MockitoAnnotations.openMocks(this);
+    // MockitoAnnotations.openMocks(this);
     // Set the private field 'cdn' using reflection
     try {
       java.lang.reflect.Field cdnField = MessagesService.class.getDeclaredField("cdn");
@@ -66,174 +71,215 @@ class MessagesServiceTest {
     return user;
   }
 
-  @Test
-  void testGetPreviousMessages_ReturnsHistoryChatDto() {
-    UUID chatId = UUID.randomUUID();
-    var userId = UUID.randomUUID();
-    var userJwt = createUserJwtData(userId.toString());
-    var userChat = new User();
-    userChat.setId(userId);
-    when(chatService.findChatById(chatId)).thenReturn(mock(Chat.class));
-    when(messageRepository.getSumOfPromptAndCompletionTokensByChatId(chatId))
-        .thenReturn(new TokensSum(5L, 10L));
-    Pageable pageable = PageRequest.of(0, 10);
-    Chat chat = mock(Chat.class);
-    TokensSum tokensSum = new TokensSum(5L, 10L);
-    List<AppMessage> messages = List.of(mock(AppMessage.class));
+  @Nested
+  @DisplayName("GetPreviousMessages Method")
+  class GetPreviousMessagesTests {
 
-    when(chatService.findChatById(chatId)).thenReturn(chat);
-    when(messageRepository.getSumOfPromptAndCompletionTokensByChatId(chatId)).thenReturn(tokensSum);
-    when(messageRepository.findAllByChatOrderByCreatedAtDesc(chat, pageable)).thenReturn(messages);
-    when(chat.getModel()).thenReturn("gpt-3");
-    Short maxOutputTokens = 100;
-    when(chat.getMaxOutputTokens()).thenReturn(maxOutputTokens);
-    when(chat.getUser()).thenReturn(userChat);
+    @Test
+    @DisplayName("getPreviousMessages - Should return HistoryChatDto with correct data")
+    void testGetPreviousMessages_ReturnsHistoryChatDto() {
+      UUID chatId = UUID.randomUUID();
+      var userId = UUID.randomUUID();
+      var userJwt = createUserJwtData(userId.toString());
+      var userChat = new User();
+      userChat.setId(userId);
+      when(chatService.findChatById(chatId)).thenReturn(mock(Chat.class));
+      when(messageRepository.getSumOfPromptAndCompletionTokensByChatId(chatId))
+          .thenReturn(new TokensSum(5L, 10L));
+      Pageable pageable = PageRequest.of(0, 10);
+      Chat chat = mock(Chat.class);
+      TokensSum tokensSum = new TokensSum(5L, 10L);
+      List<AppMessage> messages = List.of(mock(AppMessage.class));
 
-    HistoryChatDto result = messagesService.getPreviousMessages(chatId, pageable, userJwt);
+      when(chatService.findChatById(chatId)).thenReturn(chat);
+      when(messageRepository.getSumOfPromptAndCompletionTokensByChatId(chatId)).thenReturn(tokensSum);
+      when(messageRepository.findAllByChatOrderByCreatedAtDesc(chat, pageable)).thenReturn(messages);
+      when(chat.getModel()).thenReturn("gpt-3");
+      Short maxOutputTokens = 100;
+      when(chat.getMaxOutputTokens()).thenReturn(maxOutputTokens);
+      when(chat.getUser()).thenReturn(userChat);
 
-    assertThat(result).isNotNull();
-    assertThat(result.getModel()).isEqualTo("gpt-3");
-    assertThat(result.getTotalPromptTokens()).isEqualTo(5);
-    assertThat(result.getTotalCompletionTokens()).isEqualTo(10);
-  }
-
-  @Test
-  void testGetPreviousMessages_ShouldThrowException_WhenUserIdIsDifferentFromChatUserId() {
-    UUID chatId = UUID.randomUUID();
-    var userId = UUID.randomUUID();
-    var userJwt = createUserJwtData(userId.toString());
-    var userChat = new User();
-    Chat chat = mock(Chat.class);
-    Pageable pageable = PageRequest.of(0, 10);
-    userChat.setId(UUID.randomUUID());
-    when(chatService.findChatById(chatId)).thenReturn(chat);
-    when(chat.getUser()).thenReturn(userChat);
-
-    assertThrows(ResponseStatusException.class, () -> messagesService.getPreviousMessages(chatId, pageable, userJwt));
-  }
-
-  @Test
-  void testSendNewMessage_NewChat() {
-    NewMessageRequestDto requestDto = mock(NewMessageRequestDto.class);
-    String fileUrl = "file.png";
-    Chat chat = mock(Chat.class);
-    AppMessage userMessage = mock(AppMessage.class);
-    AppMessage assistantMessage = mock(AppMessage.class);
-    TokensSum tokensSum = new TokensSum(1L, 2L);
-    var userJwt = createUserJwtData(UUID.randomUUID().toString());
-    when(requestDto.getChatId()).thenReturn(null);
-    when(chatService.getChat(requestDto)).thenReturn(chat);
-    when(chat.getMessages()).thenReturn(Collections.emptyList());
-    when(chat.getId()).thenReturn(UUID.randomUUID());
-    when(chat.getTitle()).thenReturn("New Chat");
-    when(chat.getModel()).thenReturn("gpt-3");
-    when(chat.getMaxOutputTokens()).thenReturn((short) 100);
-    when(chat.getIsWebSearchMode()).thenReturn(false);
-    when(chatService.getChat(requestDto)).thenReturn(chat);
-    when(chat.getMessages()).thenReturn(Collections.emptyList());
-    try (MockedStatic<MessagesUtils> utils = Mockito.mockStatic(MessagesUtils.class)) {
-      utils.when(() -> MessagesUtils.processUserMessage(requestDto, chat, fileUrl)).thenReturn(userMessage);
-      utils.when(() -> MessagesUtils.createAssistantMessage(any(), eq(chat))).thenReturn(assistantMessage);
-      var assistantMessageRes = new AssistantMessage("Hello");
-      ChatResponse mockResponse = new ChatResponse(List.of(new Generation(assistantMessageRes)));
-      when(aiProviderService.sendNewMessage(anyList(), eq(chat))).thenReturn(mockResponse);
-      when(messageRepository.saveAll(any())).thenReturn(List.of(userMessage, assistantMessage));
-      when(messageRepository.getSumOfPromptAndCompletionTokensByChatId(any())).thenReturn(tokensSum);
-
-      doNothing().when(chatService).generateAndSetTitleForNewChat(eq(chat), eq(requestDto), any());
-      when(chat.getId()).thenReturn(UUID.randomUUID());
-      when(chat.getTitle()).thenReturn("Chat Title");
-
-      AssistantMessageResponseDto result = messagesService.sendNewMessage(requestDto, fileUrl, userJwt);
+      HistoryChatDto result = messagesService.getPreviousMessages(chatId, pageable, userJwt);
 
       assertThat(result).isNotNull();
-      assertThat(result.getTotalChatPromptTokens()).isEqualTo(1);
-      assertThat(result.getTotalChatCompletionTokens()).isEqualTo(2);
+      assertThat(result.getModel()).isEqualTo("gpt-3");
+      assertThat(result.getTotalPromptTokens()).isEqualTo(5);
+      assertThat(result.getTotalCompletionTokens()).isEqualTo(10);
+    }
+
+    @Test
+    @DisplayName("getPreviousMessages - Should throw exception when user ID differs from chat user ID")
+    void testGetPreviousMessages_ShouldThrowException_WhenUserIdIsDifferentFromChatUserId() {
+      UUID chatId = UUID.randomUUID();
+      var userId = UUID.randomUUID();
+      var userJwt = createUserJwtData(userId.toString());
+      var userChat = new User();
+      Chat chat = mock(Chat.class);
+      Pageable pageable = PageRequest.of(0, 10);
+      userChat.setId(UUID.randomUUID());
+      when(chatService.findChatById(chatId)).thenReturn(chat);
+      when(chat.getUser()).thenReturn(userChat);
+
+      assertThrows(ResponseStatusException.class, () -> messagesService.getPreviousMessages(chatId, pageable, userJwt));
     }
   }
 
-  @Test
-  void testSendNewMessage_ShouldThrowException_WhenUserIdIsDifferentFromChatUserId() throws Exception {
-    NewMessageRequestDto requestDto = mock(NewMessageRequestDto.class);
-    Chat chat = mock(Chat.class);
-    var user = new User();
-    user.setId(UUID.randomUUID());
-    var userJwt = createUserJwtData(UUID.randomUUID().toString());
-    var messages = List.of(
-        new AppMessage(UUID.randomUUID(), "user", "Hello", null, null, null, null, null, null),
-        new AppMessage(UUID.randomUUID(), "assistant", "Hi there!", null, null, null, null, null, null));
-    when(requestDto.getChatId()).thenReturn(null);
-    when(chatService.getChat(requestDto)).thenReturn(chat);
-    when(chat.getMessages()).thenReturn(messages);
-    when(chat.getId()).thenReturn(UUID.randomUUID());
-    when(chat.getTitle()).thenReturn("New Chat");
-    when(chat.getModel()).thenReturn("gpt-3");
-    when(chat.getMaxOutputTokens()).thenReturn((short) 100);
-    when(chat.getIsWebSearchMode()).thenReturn(false);
-    when(chat.getUser()).thenReturn(user);
-    when(chatService.getChat(requestDto)).thenReturn(chat);
-    when(chatRepository.findById(any(UUID.class))).thenReturn(Optional.of(chat));
-    assertThrows(ResponseStatusException.class, () -> messagesService.sendNewMessage(requestDto, null, userJwt));
+  @Nested
+  @DisplayName("SendNewMessage Method")
+  class SendNewMessageTests {
+
+    @Test
+    @DisplayName("sendNewMessage - Should handle new chat creation successfully")
+    void testSendNewMessage_NewChat() {
+      NewMessageRequestDto requestDto = new NewMessageRequestDto();
+      requestDto.setChatId(null);
+      String fileUrl = "file.png";
+      Chat chat = new Chat();
+      chat.setId(UUID.randomUUID());
+      chat.setTitle("New Chat");
+      chat.setModel("gpt-3");
+      chat.setMaxOutputTokens((short) 100);
+      chat.setIsWebSearchMode(false);
+      chat.setMessages(Collections.emptyList());
+      User user = new User();
+      user.setId(UUID.randomUUID());
+      chat.setUser(user);
+
+      AppMessage userMessage = mock(AppMessage.class);
+      AppMessage assistantMessage = mock(AppMessage.class);
+      TokensSum tokensSum = new TokensSum(1L, 2L);
+      var userJwt = createUserJwtData(UUID.randomUUID().toString());
+
+      // Only stub what's needed
+      when(chatService.getChat(requestDto)).thenReturn(chat);
+      when(messageRepository.getSumOfPromptAndCompletionTokensByChatId(chat.getId())).thenReturn(tokensSum);
+
+      try (MockedStatic<MessagesUtils> utils = Mockito.mockStatic(MessagesUtils.class)) {
+        utils.when(() -> MessagesUtils.processUserMessage(requestDto, chat, fileUrl)).thenReturn(userMessage);
+        utils.when(() -> MessagesUtils.createAssistantMessage(any(), eq(chat))).thenReturn(assistantMessage);
+
+        var assistantMessageRes = new AssistantMessage("Hello");
+        ChatResponse mockResponse = new ChatResponse(List.of(new Generation(assistantMessageRes)));
+        when(aiProviderService.sendNewMessage(anyList(), eq(chat))).thenReturn(mockResponse);
+        when(messageRepository.saveAll(any())).thenReturn(List.of(userMessage, assistantMessage));
+        doNothing().when(chatService).generateAndSetTitleForNewChat(eq(chat), eq(requestDto), any());
+
+        AssistantMessageResponseDto result = messagesService.sendNewMessage(requestDto, fileUrl, userJwt);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getTotalChatPromptTokens()).isEqualTo(1);
+        assertThat(result.getTotalChatCompletionTokens()).isEqualTo(2);
+      }
+    }
+
+    @Test
+    @DisplayName("sendNewMessage - Should throw exception when user ID differs from chat user ID")
+    void testSendNewMessage_ShouldThrowException_WhenUserIdIsDifferentFromChatUserId() {
+      NewMessageRequestDto requestDto = new NewMessageRequestDto();
+      requestDto.setChatId(null);
+
+      Chat chat = new Chat();
+      chat.setId(UUID.randomUUID());
+      chat.setTitle("New Chat");
+      chat.setModel("gpt-3");
+      chat.setMaxOutputTokens((short) 100);
+      chat.setIsWebSearchMode(false);
+
+      User user = new User();
+      user.setId(UUID.randomUUID());
+      chat.setUser(user);
+
+      List<AppMessage> messages = List.of(
+          new AppMessage(UUID.randomUUID(), "user", "Hello", null, null, null, null, null, null),
+          new AppMessage(UUID.randomUUID(), "assistant", "Hi there!", null, null, null, null, null, null)
+      );
+      chat.setMessages(messages);
+
+      var userJwt = createUserJwtData(UUID.randomUUID().toString());
+
+      when(chatService.getChat(requestDto)).thenReturn(chat);
+
+      assertThrows(ResponseStatusException.class, () -> messagesService.sendNewMessage(requestDto, null, userJwt));
+    }
   }
 
-  @Test
-  void testSaveAll_DelegatesToRepository() {
-    AppMessage msg1 = mock(AppMessage.class);
-    AppMessage msg2 = mock(AppMessage.class);
-    List<AppMessage> messages = List.of(msg1, msg2);
+  @Nested
+  @DisplayName("SaveAll Method")
+  class SaveAllTests {
 
-    when(messageRepository.saveAll(messages)).thenReturn(messages);
+    @Test
+    @DisplayName("saveAll - Should delegate to repository correctly")
+    void testSaveAll_DelegatesToRepository() {
+      AppMessage msg1 = mock(AppMessage.class);
+      AppMessage msg2 = mock(AppMessage.class);
+      List<AppMessage> messages = List.of(msg1, msg2);
 
-    List<AppMessage> result = messagesService.saveAll(messages);
+      when(messageRepository.saveAll(messages)).thenReturn(messages);
 
-    assertThat(result).containsExactly(msg1, msg2);
-    verify(messageRepository).saveAll(messages);
+      List<AppMessage> result = messagesService.saveAll(messages);
+
+      assertThat(result).containsExactly(msg1, msg2);
+      verify(messageRepository).saveAll(messages);
+    }
   }
 
-  @Test
-  void testDeleteAllByChat_DeletesMessagesAndFiles() {
-    UUID chatId = UUID.randomUUID();
-    AppMessage msg1 = mock(AppMessage.class);
-    AppMessage msg2 = mock(AppMessage.class);
+  @Nested
+  @DisplayName("DeleteAllByChat Method")
+  class DeleteAllByChatTests {
 
-    when(messageRepository.findAllByChatId(chatId)).thenReturn(List.of(msg1, msg2));
-    when(msg1.getFileUrl()).thenReturn("https://cdn.example.com/image1.png");
-    when(msg2.getFileUrl()).thenReturn(null);
+    @Test
+    @DisplayName("deleteAllByChat - Should delete messages and associated files")
+    void testDeleteAllByChat_DeletesMessagesAndFiles() {
+      UUID chatId = UUID.randomUUID();
+      AppMessage msg1 = mock(AppMessage.class);
+      AppMessage msg2 = mock(AppMessage.class);
 
-    doNothing().when(awsS3Service).deleteFile("image1.png");
-    doNothing().when(messageRepository).deleteAllByChatId(chatId);
+      when(messageRepository.findAllByChatId(chatId)).thenReturn(List.of(msg1, msg2));
+      when(msg1.getFileUrl()).thenReturn("https://cdn.example.com/image1.png");
+      when(msg2.getFileUrl()).thenReturn(null);
 
-    messagesService.deleteAllByChat(chatId);
+      doNothing().when(awsS3Service).deleteFile("image1.png");
+      doNothing().when(messageRepository).deleteAllByChatId(chatId);
 
-    verify(awsS3Service).deleteFile("image1.png");
-    verify(messageRepository).deleteAllByChatId(chatId);
+      messagesService.deleteAllByChat(chatId);
+
+      verify(awsS3Service).deleteFile("image1.png");
+      verify(messageRepository).deleteAllByChatId(chatId);
+    }
   }
 
-  @Test
-  void testIsChatNew_ReturnsTrueIfMessagesNullOrEmpty() {
-    Chat chat = mock(Chat.class);
-    when(chat.getMessages()).thenReturn(null);
-    assertThat(invokeIsChatNew(chat)).isTrue();
+  @Nested
+  @DisplayName("IsChatNew Method")
+  class IsChatNewTests {
 
-    when(chat.getMessages()).thenReturn(Collections.emptyList());
-    assertThat(invokeIsChatNew(chat)).isTrue();
-  }
+    @Test
+    @DisplayName("isChatNew - Should return true when messages are null or empty")
+    void testIsChatNew_ReturnsTrueIfMessagesNullOrEmpty() {
+      Chat chat = mock(Chat.class);
+      when(chat.getMessages()).thenReturn(null);
+      assertThat(invokeIsChatNew(chat)).isTrue();
 
-  @Test
-  void testIsChatNew_ReturnsFalseIfMessagesNotEmpty() {
-    Chat chat = mock(Chat.class);
-    when(chat.getMessages()).thenReturn(List.of(mock(AppMessage.class)));
-    assertThat(invokeIsChatNew(chat)).isFalse();
-  }
+      when(chat.getMessages()).thenReturn(Collections.emptyList());
+      assertThat(invokeIsChatNew(chat)).isTrue();
+    }
 
-  // Helper to invoke private method
-  private boolean invokeIsChatNew(Chat chat) {
-    try {
-      var method = MessagesService.class.getDeclaredMethod("isChatNew", Chat.class);
-      method.setAccessible(true);
-      return (boolean) method.invoke(messagesService, chat);
-    } catch (Exception e) {
-      throw new RuntimeException(e);
+    @Test
+    @DisplayName("isChatNew - Should return false when messages are not empty")
+    void testIsChatNew_ReturnsFalseIfMessagesNotEmpty() {
+      Chat chat = mock(Chat.class);
+      when(chat.getMessages()).thenReturn(List.of(mock(AppMessage.class)));
+      assertThat(invokeIsChatNew(chat)).isFalse();
+    }
+
+    // Helper to invoke private method
+    private boolean invokeIsChatNew(Chat chat) {
+      try {
+        var method = MessagesService.class.getDeclaredMethod("isChatNew", Chat.class);
+        method.setAccessible(true);
+        return (boolean) method.invoke(messagesService, chat);
+      } catch (Exception e) {
+        throw new RuntimeException(e);
+      }
     }
   }
 }
